tests/NormalTests/paczka1/small_fuzzy/29788046.err
Error in line 5: mJtIxWRw14 S155 41,7
Error in line 6: mJtIxWRw14 A132 31,1
Error in line 7: mJtIxWRw14 A514 88,1
Error in line 9: vOOTJT A514 65,5
